crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__pypi_options__test__extra_index_exclude_newer_true_is_error.snap
---
source: crates/pixi_manifest/src/toml/pypi_options.rs
expression: "format_parse_error(input, PypiOptions::from_toml_str(input).unwrap_err())"
---
  × `exclude-newer = true` is not valid; use a date, duration, or `false`
   ╭─[pixi.toml:1:72]
 1 │ extra-index-urls = [{ url = "https://internal/simple", exclude-newer = true }]
   ·                                                                        ────
   ╰────
