crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__pypi_options__test__extra_index_missing_url_is_error.snap
---
source: crates/pixi_manifest/src/toml/pypi_options.rs
expression: "format_parse_error(input, PypiOptions::from_toml_str(input).unwrap_err())"
---
  × missing field 'url' in table
   ╭─[pixi.toml:1:21]
 1 │ extra-index-urls = [{ exclude-newer = false }]
   ·                     ─────────────────────────
   ╰────
