crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__pypi_options__test__no_binary_packages.snap
---
source: crates/pixi_manifest/src/toml/pypi_options.rs
expression: options
---
PypiOptions {
    index_url: None,
    extra_index_urls: None,
    find_links: None,
    no_build_isolation: Packages(
        {},
    ),
    index_strategy: None,
    prerelease_mode: None,
    no_build: None,
    dependency_overrides: None,
    no_binary: Some(
        Packages(
            {
                PackageName(
                    "package1",
                ),
            },
        ),
    ),
}
