crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__pypi_options__test__no_build_packages.snap
---
source: crates/pixi_manifest/src/toml/pypi_options.rs
expression: options
---
PypiOptions {
    index_url: None,
    extra_index_urls: None,
    find_links: None,
    no_build_isolation: None,
    index_strategy: None,
    no_build: Some(
        Packages(
            [
                "package1",
            ],
        ),
    ),
}
